<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_calendario"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_partners"
            android:icon="@drawable/ic_partner"
            android:title="@string/menu_partners" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_pedidos"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_envios"
            android:icon="@drawable/ic_envios"
            android:title="@string/menu_envios" />
    </group>
</menu>