<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendario.Crear_Citas">

    <TextView
        android:id="@+id/TVtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="99dp"
        android:text="@string/titulo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ETtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/TVtitulo"
        app:layout_constraintStart_toEndOf="@+id/TVtitulo" />

    <EditText
        android:id="@+id/ETfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/ETtitulo"
        app:layout_constraintTop_toBottomOf="@+id/ETtitulo" />

    <TextView
        android:id="@+id/TVfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:text="@string/fecha"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ETfecha"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EThora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/ETfecha"
        app:layout_constraintTop_toBottomOf="@+id/ETfecha" />

    <TextView
        android:id="@+id/TVhora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:text="@string/hora"
        app:layout_constraintBottom_toBottomOf="@+id/EThora"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETasunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/TVasunto"
        app:layout_constraintTop_toBottomOf="@+id/EThora" />

    <TextView
        android:id="@+id/TVasunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:text="@string/asunto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <Button
        android:id="@+id/BTNcrearCita"
        android:layout_width="221dp"
        android:layout_height="66dp"
        android:layout_marginBottom="205dp"
        android:text="@string/crear_nueva_cita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="saveData"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>